--- a/semundjet/1.html
+++ b/semundjet/1.html
@@ -1,14 +1,24 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Diets Based on Diseases</title>
+  <link rel="stylesheet" href="css.css">
 </head>
 <body>
-    <p>
-        elda 
-    </p>
+  <header>
+    <h1>Diets Based on Diseases</h1>
+  </header>
+  <nav>
+    <button id="diabetesBtn">Diabetes</button>
+    <button id="hypertensionBtn">Hypertension</button>
+    <!-- Add more buttons for other diseases -->
+  </nav>
+  <div id="dietContainer" class="container">
+    <!-- Diets will be displayed here -->
+  </div>
+  <script src="js.js"></script>
 </body>
 </html>
+
