--- a/Nutricion/border.html
+++ b/Nutricion/border.html
@@ -18,23 +18,13 @@
             text-align: center;
         }
 
-        nav {
-            background-color: #ccc;
-            padding: 1rem;
-            text-align: center;
-        }
-
-        nav a {
-            color: #333;
-            text-decoration: none;
-            padding: 0.5rem;
-        }
-
         main {
             text-align: center; /* Aligns text center within main */
             padding: 5rem;
-            background-color: #cc8845;
-
+            background-color: #93a3d8;
+            display: flex;
+            flex-direction: column;
+            align-items: center; /* Centers items horizontally */
         }
 
         footer {
@@ -47,29 +37,31 @@
 
         .card {
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-            transition: 0.3s;
-            width: 40%;
-            margin-bottom: 2rem;
+            transition: 0.5s; /* ndryshimi ne card me sa sec */
             color: palevioletred;
             background-color: #302b63;
             border-radius: 45px;
-            width: 300px;
-            margin: 10px;
+            width: 500px;
+            margin: 30px;
             padding: 10px;
             border: 3px solid #551650;
+
         }
         .card:hover {
             box-shadow: 0 10px 16px 0 rgb(53, 157, 177);
         }
 
         .container {
-            padding: 5px 16px; //largesia nga kufiri
+            padding: 10px 16px; /*largesia nga kufiri*/
+            max-left: 300px;
+
         }
 
         div:hover{
             background-color: rgb(2, 45, 53);
             color: rgb(108, 155, 197);
-            border-radius: 10%;
+            border-radius:45px;
+            border: 2px solid #11395a;
         }
 
     </style>
