--- a/homePage/index.html
+++ b/homePage/index.html
@@ -3,60 +3,29 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
-<header>
-    <h1 id="top">Nutrition & Catering</h1>
-    <h1 id="top1">DietShop</h1>
-</header>
-<hr>
-<nav id="navbar">
-    <img src="5.jpeg">
-    <ul id="navcontent">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Menu</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
-    </ul>
-</nav>
-<div id="container1">
-    <div id="row1">
-        Welcome to DietShop - Nutrition & Catering Services
+<div id="subscription-container">
+    <div class="subscription-box">
+        <h2>Nutrition Plan</h2>
+        <p>Get personalized nutrition plans tailored to your dietary needs.</p>
+        <button class="btn">Buy Now</button>
     </div>
-    <button class="btn">ORDER NOW</button>
-    <div id="container3">
-        <div id="row2">
-            <button class="btn">Nutrition</button>
-        </div>
-        <div id="row3">
-            <button class="btn">Diets</button>
-        </div>
-        <div id="row7">
-            <button class="btn">Catering</button>
-        </div>
+    <div class="subscription-box">
+        <h2>Diet Plan</h2>
+        <p>Receive custom diet plans designed to help you achieve your fitness goals.</p>
+        <button class="btn">Buy Now</button>
+    </div>
+    <div class="subscription-box">
+        <h2>Catering Plan</h2>
+        <p>Enjoy weekly catering services delivering delicious and nutritious meals to your doorstep.</p>
+        <button class="btn">Buy Now</button>
     </div>
 </div>
-<hr>
-<h1 id="top3">Subscription Plans</h1>
-<div id="container4">
-    <div id="row4">
-        <button class="btn">Nutrition Plan</button>
-    </div>
-    <div id="row5">
-        <button class="btn">Diet Plan</button>
-    </div>
-    <div id="row6">
-        <button class="btn">Catering Plan</button>
-    </div>
-</div>
-<footer>
-    Copyright © 2020-2021 DietShop. All Rights Reserved.
-</footer>
 </body>
 
 </html>
