--- a/Abonimi/abonimi.html
+++ b/Abonimi/abonimi.html
@@ -1,206 +1,156 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <title>Homepage for Restaurant</title>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1.0">
-    <title>Fooddddie's Kitchen</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet"
-          href=
-                  "https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-          integrity=
-                  "sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-          crossorigin="anonymous">
-    <title>Title</title>
-</head>
+<div class="container-fluid bg-trasparent my-4 p-3" style="position: relative">
+    <div class="row row-cols-1 row-cols-xs-2 row-cols-sm-2 row-cols-lg-4 g-3">
+        <div class="col hp">
+            <div class="card h-100 shadow-sm">
+                <a href="#">
+                    <img src="https://cdn.britannica.com/36/123536-050-95CB0C6E/Variety-fruits-vegetables.jpg" class="card-img-top" alt="Delicious Food" />                </a>
 
-<body>
+                <div class="label-top shadow-sm">
+                    <a class="text-white" href="#">Sale</a>
+                </div>
+                <div class="card-body">
+                    <div class="clearfix mb-3">
+                        <span class="float-start badge rounded-pill bg-success" style="text-decoration: line-through;">70$</span>
+                        <span class="float-start badge rounded-pill bg-success">20$</span>
 
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">
-        Fooddddie's Kitchen
-    </a>
-    <button class="navbar-toggler" type="button"
-            data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false"
-            aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="#about">
-                    About
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#reservation">
-                    Reservation
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#menu">
-                    Menu
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#shop">
-                    Shop
-                </a>
-            </li>
-        </ul>
-    </div>
-</nav>
-
-<!-- Hero Section -->
-<section class="hero-section text-center">
-    <div class="container">
-        <h1 class="display-4 text-white">
-            Welcome To Fooddddie's Kitchen
-        </h1>
-        <p class="lead text-white">
-            Explore a world of flavors and
-            indulge in culinary delights.
-        </p>
-        <a class="btn btn-primary btn-lg" href="#reservations">
-            Book a table
-        </a>
-    </div>
-</section>
-
-<!-- About Section -->
-<section id="about" class="about-section">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-6">
-                <h2 class="section-heading">
-                    Why Choose Us?
-                </h2>
-                <p class="text-muted">
-                    Discover the extraordinary at Fooddddie's Kitchen.
-                    Our commitment to quality and
-                    exceptional service makes us your top choice.
-                    Lorem ipsum dolor sit amet,
-                    consectetur adipisicing elit.
-                </p>
-            </div>
-            <div class="col-lg-6">
-                <img src="image/1.png"
-                     class="img-fluid" alt="About Image">
-            </div>
-        </div>
-    </div>
-</section>
-
-<!-- Carousel Section -->
-<section class="carousel-section">
-    <div id="carouselExampleControls"
-         class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="src=image/2.png"
-                     class="d-block w-100"
-                     alt="Food Image 1">
-            </div>
-            <div class="carousel-item">
-                <img src="src=image/3.png"
-                     class="d-block w-100"
-                     alt="Food Image 2">
-            </div>
-            <div class="carousel-item">
-                <img src="src=image/4.png"
-                     class="d-block w-100"
-                     alt="Food Image 3">
-            </div>
-        </div>
-        <a class="carousel-control-prev"
-           href="#carouselExampleControls" role="button"
-           data-slide="prev">
-				<span class="carousel-control-prev-icon"
-                      aria-hidden="true">
-				</span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next"
-           href="#carouselExampleControls"
-           role="button" data-slide="next">
-				<span class="carousel-control-next-icon"
-                      aria-hidden="true">
-				</span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
-</section>
-
-<!-- Reservation and Contact Section -->
-<section id="reservations" class="reservation-section">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-6">
-                <h2 class="section-heading">
-                    Make a Booking
-                </h2>
-                <form>
-                    <div class="form-group">
-                        <label for="name">Your Name</label>
-                        <input type="text" class="form-control"
-                               id="name" placeholder="Enter your name">
+                        <span class="float-end"><a href="#" class="small text-muted text-uppercase aff-link">MEGI</a></span>
                     </div>
-                    <div class="form-group">
-                        <label for="phoneNumber">
-                            Phone Number
-                        </label>
-                        <input type="text"
-                               class="form-control" id="phoneNumber"
-                               placeholder="Enter your phone number">
+                    <h5 class="card-title">
+                        <a target="_blank" href="#">Weight Loss Meal Plans</a>
+                    </h5>
+
+                    <div class="d-grid gap-2 my-4">
+
+                        <a href="#" class="btn btn-warning bold-btn">add to cart</a>
+
                     </div>
-                    <button type="submit" class="btn btn-primary">
-                        Submit
-                    </button>
-                </form>
+                    <div class="clearfix mb-1">
+
+                        <span class="float-start"><a href="#"><i class="fas fa-question-circle"></i></a></span>
+
+                        <span class="float-end">
+              <i class="far fa-heart" style="cursor: pointer"></i>
+
+            </span>
+                    </div>
+                </div>
             </div>
-            <div class="col-lg-6 opening-time">
-                <h2 class="section-heading">Opening Times</h2>
-                <p class="text-muted">
-                    <span>Monday—Thursday: 08:00 — 22:00</span><br>
-                    <span>Friday—Saturday: 09:00 — 23:00</span><br>
-                    <span>Sunday: 10:00 — 17:00</span>
-                </p>
-                <h2 class="section-heading">Contact</h2>
-                <p class="text-muted">
-                    <span>410-602-8008</span><br>
-                    <span>15 Florida Ave</span><br>
-                    <span>Palo-Alto, 1111 CA</span>
-                </p>
+        </div>
+        <div class="col hp">
+            <div class="card h-100 shadow-sm">
+                <a href="#">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6d/Good_Food_Display_-_NCI_Visuals_Online.jpg" class="card-img-top" alt="product.title" />
+                </a>
+
+                <div class="label-top shadow-sm">
+                    <a class="text-white" href="#">razer</a>
+                </div>
+                <div class="card-body">
+                    <div class="clearfix mb-3">
+                        <span class="float-start badge rounded-pill bg-success">15$</span>
+
+                        <span class="float-end"><a href="#" class="small text-muted text-uppercase aff-link">reviews</a></span>
+                    </div>
+                    <h5 class="card-title">
+                        <a target="_blank" href="#">Custom Meal Plan</a>
+                    </h5>
+
+                    <div class="d-grid gap-2 my-4">
+
+                        <a href="#" class="btn btn-warning bold-btn">add to cart</a>
+
+                    </div>
+                    <div class="clearfix mb-1">
+
+                        <span class="float-start"><a href="#"><i class="fas fa-question-circle"></i></a></span>
+
+                        <span class="float-end">
+              <i class="far fa-heart" style="cursor: pointer"></i>
+
+            </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col hp">
+            <div class="card h-100 shadow-sm">
+                <a href="#">
+                    <img src="https://m.media-amazon.com/images/I/81w+3k4U8PL._AC_SL1500_.jpg" class="card-img-top" alt="product.title" />
+                </a>
+
+                <div class="label-top shadow-sm">
+                    <a class="text-white" href="#">lenovo</a>
+                </div>
+                <div class="card-body">
+                    <div class="clearfix mb-3">
+                        <span class="float-start badge rounded-pill bg-success">58$</span>
+
+                        <span class="float-end"><a href="#" class="small text-muted text-uppercase aff-link">reviews</a></span>
+                    </div>
+                    <h5 class="card-title">
+                        <a target="_blank" href="#">The 30-Day Women's Transformation Stack</a>
+                    </h5>
+
+                    <div class="d-grid gap-2 my-4">
+
+                        <a href="#" class="btn btn-warning bold-btn">add to cart</a>
+
+                    </div>
+                    <div class="clearfix mb-1">
+
+                        <span class="float-start"><a href="#"><i class="fas fa-question-circle"></i></a></span>
+
+                        <span class="float-end">
+              <i class="far fa-heart" style="cursor: pointer"></i>
+
+            </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col hp">
+            <div class="card h-100 shadow-sm">
+                <a href="#">
+                    <img src="https://m.media-amazon.com/images/I/61Ze2wc9nyS._AC_SL1500_.jpg" class="card-img-top" alt="product.title" />
+                </a>
+                <!-- <div class="label-top shadow-sm">Asus Rog</div>  -->
+                <div class="label-top shadow-sm">
+                    <a class="text-white" href="#">msi</a>
+                </div>
+                <div class="card-body">
+                    <div class="clearfix mb-3">
+                        <span class="float-start badge rounded-pill bg-success" style="text-decoration: line-through"> 70$</span>
+                        <span class="float-start badge rounded-pill bg-success"> 70$</span>
+
+
+                        <span class="float-end"><a href="#" class="small text-muted text-uppercase aff-link">reviews</a></span>
+                    </div>
+                    <h5 class="card-title">
+                        <a target="_blank" href="#">The 30-Day Men's Transformation Stack</a>
+                    </h5>
+
+                    <div class="d-grid gap-2 my-4">
+
+                        <a href="#" class="btn btn-warning bold-btn">add to cart</a>
+
+                    </div>
+                    <div class="clearfix mb-1">
+
+                        <span class="float-start"><a href="#"><i class="fas fa-question-circle"></i></a></span>
+
+                        <span class="float-end">
+
+<i class="far fa-heart" style="cursor: pointer"></i>
+
+            </span>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-</section>
+</div>
 
-<!-- Footer Section -->
-<footer class="footer-section text-center">
-    <div class="container">
-        <p>© 2023 Fooddddie's Kitchen. All rights reserved.</p>
-    </div>
-</footer>
-
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-</body>
-
-</html>
+<div class="small text-muted my-4">Images by <a target="_blank" href="https://www.amazon.com/">Amazon</a></div>
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.2/css/bootstrap.min.css'>
 <link rel="stylesheet" type="text/css" href="abonimi.css">
-
