--- a/homePage/index.html
+++ b/homePage/index.html
@@ -12,9 +12,11 @@
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Menu</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
+        <li><a href="index.html">Contact Us</a></li>
     </ul>
-    <button class="btn1">Log In</button>
+    <button class="btn1" onclick=''login/logIIn.html"">Log In</button>
+
+//megi mos i bej merge te gabuares, duhet kjo
 </nav>
 <header>
     <h1 id="top">Nutrition & Catering</h1>
