--- a/homePage/index.html
+++ b/homePage/index.html
@@ -16,7 +16,7 @@
     </ul>
     <button class="btn1" onclick=''login/logIIn.html"">Log In</button>
 
-//megi mos i bej merge te gabuares, duhet kjo
+/* megi mos i bej merge te gabuares, duhet kjoooo*/
 </nav>
 <header>
     <h1 id="top">Nutrition & Catering</h1>
