--- a/Abonimi/abonimi.html
+++ b/Abonimi/abonimi.html
@@ -4,20 +4,20 @@
         <div class="col hp">
             <div class="card h-100 shadow-sm">
                 <a href="#">
-                    <img src="https://cdn.britannica.com/36/123536-050-95CB0C6E/Variety-fruits-vegetables.jpg" class="card-img-top" alt="Delicious Food" />                </a>
+                    <img src="https://i.pinimg.com/originals/05/5f/34/055f3456e2ce5469494532fcc2b0f759.jpg" class="card-img-top" alt="Delicious Food" />                </a>
 
                 <div class="label-top shadow-sm">
-                    <a class="text-white" href="#">Sale</a>
+                    <a class="text-white" href="#">SALE</a>
                 </div>
                 <div class="card-body">
                     <div class="clearfix mb-3">
-                        <span class="float-start badge rounded-pill bg-success" style="text-decoration: line-through;">70$</span>
-                        <span class="float-start badge rounded-pill bg-success">20$</span>
+                        <span class="float-start badge rounded-pill bg-success" style="text-decoration: line-through;">150$</span>
+                        <span class="float-start badge rounded-pill bg-success">130$</span>
 
-                        <span class="float-end"><a href="#" class="small text-muted text-uppercase aff-link">MEGI</a></span>
+                        <span class="float-end"><a href="#" class="small text-muted text-uppercase aff-link">reviews</a></span>
                     </div>
                     <h5 class="card-title">
-                        <a target="_blank" href="#">Weight Loss Meal Plans</a>
+                        <a target="_blank" href="#">Gain Weight Plan</a>
                     </h5>
 
                     <div class="d-grid gap-2 my-4">
@@ -40,15 +40,12 @@
         <div class="col hp">
             <div class="card h-100 shadow-sm">
                 <a href="#">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6d/Good_Food_Display_-_NCI_Visuals_Online.jpg" class="card-img-top" alt="product.title" />
+                    <img src="https://i.pinimg.com/originals/25/8d/d6/258dd6a242b6ef919cb416bbc550e939.jpg" class="card-img-top" alt="product.title" />
                 </a>
 
-                <div class="label-top shadow-sm">
-                    <a class="text-white" href="#">razer</a>
-                </div>
                 <div class="card-body">
                     <div class="clearfix mb-3">
-                        <span class="float-start badge rounded-pill bg-success">15$</span>
+                        <span class="float-start badge rounded-pill bg-success">200$</span>
 
                         <span class="float-end"><a href="#" class="small text-muted text-uppercase aff-link">reviews</a></span>
                     </div>
@@ -76,15 +73,12 @@
         <div class="col hp">
             <div class="card h-100 shadow-sm">
                 <a href="#">
-                    <img src="https://m.media-amazon.com/images/I/81w+3k4U8PL._AC_SL1500_.jpg" class="card-img-top" alt="product.title" />
+                    <img src="https://i.pinimg.com/originals/a3/e3/9c/a3e39c176fcddc51bdca84e58ddb6a11.jpg" class="card-img-top" alt="product.title" />
                 </a>
 
-                <div class="label-top shadow-sm">
-                    <a class="text-white" href="#">lenovo</a>
-                </div>
                 <div class="card-body">
                     <div class="clearfix mb-3">
-                        <span class="float-start badge rounded-pill bg-success">58$</span>
+                        <span class="float-start badge rounded-pill bg-success">180$</span>
 
                         <span class="float-end"><a href="#" class="small text-muted text-uppercase aff-link">reviews</a></span>
                     </div>
@@ -112,16 +106,16 @@
         <div class="col hp">
             <div class="card h-100 shadow-sm">
                 <a href="#">
-                    <img src="https://m.media-amazon.com/images/I/61Ze2wc9nyS._AC_SL1500_.jpg" class="card-img-top" alt="product.title" />
+                    <img src="https://i.pinimg.com/originals/e9/bd/24/e9bd248f02d51c087314d60274b33cdb.jpg" class="card-img-top" alt="product.title" />
                 </a>
                 <!-- <div class="label-top shadow-sm">Asus Rog</div>  -->
                 <div class="label-top shadow-sm">
-                    <a class="text-white" href="#">msi</a>
+                    <a class="text-white" href="#">SALE</a>
                 </div>
                 <div class="card-body">
                     <div class="clearfix mb-3">
-                        <span class="float-start badge rounded-pill bg-success" style="text-decoration: line-through"> 70$</span>
-                        <span class="float-start badge rounded-pill bg-success"> 70$</span>
+                        <span class="float-start badge rounded-pill bg-success" style="text-decoration: line-through"> 180$</span>
+                        <span class="float-start badge rounded-pill bg-success"> 150$</span>
 
 
                         <span class="float-end"><a href="#" class="small text-muted text-uppercase aff-link">reviews</a></span>
