--- a/aboutAs/aoutAs.html
+++ b/aboutAs/aoutAs.html
@@ -14,50 +14,66 @@
         <li><a href="about.html">About</a></li>
         <li><a href="#">Menu</a></li>
         <li><a href="../contact/contact.html">Contact Us</a></li>
-    </ul>
-    <a href="../logIn/logIn.html" class="btn1">Log In</a>
-</nav>
-<header>
-    <h1 id="top">About DietShop</h1>
-</header>
-<hr>
-<hr>
-<div class="about-content">
-    <h2>Our Story</h2>
-    <p>Welcome to DietShop, where our journey began with a simple idea: to provide individuals with the tools and
-        resources to lead healthier lives through proper nutrition and catering services.</p>
-    <p>Our story started in a small kitchen, where our founder, passionate about nutrition and wellness, began crafting
-        personalized nutrition plans for friends and family. As the demand for our services grew, so did our vision.</p>
-    <p>Today, DietShop stands as a testament to our commitment to excellence in nutrition and catering. We believe in
-        delivering not just meals, but experiences that nourish the body and soul.</p>
-    <p>Our mission is to empower individuals to make informed choices about their health and wellness by providing
-        access to delicious, nutritious meals and personalized support every step of the way.</p>
-    <p>At DietShop, we envision a future where everyone has the opportunity to thrive and live their best lives through
-        the power of healthy eating.</p>
-</div>
-<hr>
-<div class="team-section">
-    <h2>Meet Our Team</h2>
-    <div class="team-member">
-        <img src="team_member1.jpg" alt="Team Member 1">
-        <h3>John Doe</h3>
-        <p>Founder & CEO</p>
-    </div>
-    <div class="team-member">
-        <img src="team_member2.jpg" alt="Team Member 2">
-        <h3>Jane Smith</h3>
-        <p>Head Chef</p>
-    </div>
-</div>
-<hr>
-<!-- Update the Testimonials section in about.html -->
+
+        <!-- <a href="../logIn/logIn.html" class="btn1">Log In</a> -->
+         </ul>
+     </nav>
+     <header>
+         <h1 id="top">About DietShop</h1>
+     </header>
+     <hr>
+     <hr>
+     <div class="about-content">
+         <h2>Our Story</h2>
+         <p>Welcome to DietShop, where our journey began with a simple idea: to provide individuals with the tools and
+             resources to lead healthier lives through proper nutrition and catering services.</p>
+         <p>Our story started in a small kitchen, where our founder, passionate about nutrition and wellness, began crafting
+             personalized nutrition plans for friends and family. As the demand for our services grew, so did our vision.</p>
+         <p>Today, DietShop stands as a testament to our commitment to excellence in nutrition and catering. We believe in
+             delivering not just meals, but experiences that nourish the body and soul.</p>
+         <p>Our mission is to empower individuals to make informed choices about their health and wellness by providing
+             access to delicious, nutritious meals and personalized support every step of the way.</p>
+         <p>At DietShop, we envision a future where everyone has the opportunity to thrive and live their best lives through
+             the power of healthy eating.</p>
+     </div>
+     <hr>
+     <div class="team-section">
+         <h2>Meet Our Team</h2>
+         <div class="team-member">
+             <p> Team Member 1</p>
+             <h3>Megi Grenazi</h3>
+         </div>
+         <div class="team-member">
+             <p> Team Member 2 </p>
+             <h3>Grasjela Celaj</h3>
+
+         </div>
+         <div class="team-member">
+             <p> Team Member 3</p>
+             <h3>Kismete Guri</h3>
+
+         </div>
+         <div class="team-member">
+             <p> Team Member 4 </p>
+             <h3>Elda Halilaj</h3>
+
+         </div>
+
+     <div class="team-member">
+         <p> Team Member 5</p>
+         <h3>Arber Allko</h3>
+
+     </div>
+     </div>
+
+     <hr>
+     <!-- Update the Testimonials section in about.html -->
 <div class="testimonials-section">
     <h2>Testimonials</h2>
     <div class="testimonial-carousel">
         <div class="testimonials-container">
             <div class="testimonial">
-                <p>"DietShop has transformed my life! Their nutrition plans are delicious and easy to follow. I've never
-                    felt better!"</p>
+                <p>"DietShop has transformed my life! Their nutrition plans are delicious and easy to follow. "</p>
                 <p class="testimonial-author">- Emily Johnson</p>
             </div>
             <div class="testimonial">
@@ -72,7 +88,7 @@
             <!-- Add more testimonials here -->
         </div>
         <div class="carousel-buttons">
-            <button id="prevBtn">&lt;</button>
+            <button id="prevBtn"></button>
             <button id="nextBtn">&gt;</button>
         </div>
     </div>
