--- a/homePage/index.html
+++ b/homePage/index.html
@@ -12,8 +12,11 @@
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Menu</a></li>
-        <li><a href="../contact/contact.html">Contact Us</a></li>
+        <li><a href="index.html">Contact Us</a></li>
     </ul>
+
+
+
     <a href="../logIn/logIIn.html" class="btn1">Log In</a>
 </nav>
 <header>
@@ -36,8 +39,7 @@
     <div class="wrap wrap--2">
         <div class="container container--2">
             <h2>Diet Plan</h2>
-            <p>Receive custom diet plans designed to help you achieve your fitness goals. Click the button below to view
-                more.</p>
+            <p>Receive custom diet plans designed to help you achieve your fitness goals. Click the button below to view more.</p>
             <button class="btn">View More</button>
         </div>
     </div>
@@ -45,8 +47,7 @@
     <div class="wrap wrap--3">
         <div class="container container--3">
             <h2>Catering Plan</h2>
-            <p>Enjoy weekly catering services delivering delicious and nutritious meals to your doorstep. Click the
-                button below to view more.</p>
+            <p>Enjoy weekly catering services delivering delicious and nutritious meals to your doorstep. Click the button below to view more.</p>
             <button class="btn">View More</button>
         </div>
     </div>
