--- a/logIn/logIIn.html
+++ b/logIn/logIIn.html
@@ -9,22 +9,21 @@
 <div class="main">
     <input type="checkbox" id="chk" aria-hidden="true">
 
-    <div class="Abonohu">
+    <div class="Sign in">
 
         <form>
-            <label for="chk" aria-hidden="true">Abonohu</label>
-
+            <label for="chk" aria-hidden="true">Sign In</label>
             <input type="text" name="txt" placeholder="User name" required="">
             <input type="email" name="email" placeholder="Email" required="">
             <input type="password" name="pswd" placeholder="Password" required="">
-            <button>Abonohu</button>
+            <button>Sign in</button>
 
         </form>
     </div>
 
     <div class="login">
         <form>
-            <label for="chk" aria-hidden="true">Login</label>
+            <label for="chk" aria-hidden="true">LogIn</label>
             <input type="email" name="email" placeholder="Email" required="">
             <input type="password" name="pswd" placeholder="Password" required="">
             <button>Login</button>
