--- a/homePage/index.html
+++ b/homePage/index.html
@@ -10,11 +10,10 @@
 <nav id="navbar">
     <ul id="navcontent">
         <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="../aboutAs/aoutAs.html">About</a></li>
         <li><a href="#">Menu</a></li>
-        <li><a href="index.html">Contact Us</a></li>
+        <li><a href="../contact/contact.html">Contact Us</a></li>
     </ul>
-
 
 
     <a href="../logIn/logIIn.html" class="btn1">Log In</a>
@@ -32,22 +31,24 @@
         <div class="container container--1">
             <h2>Nutrition Plan</h2>
             <p>Get personalized nutrition plans tailored to your dietary needs. Click the button below to view more.</p>
-            <button class="btn">View More</button>
+            <button class="btn" id="viewMoreBtn">View More</button>
         </div>
     </div>
 
     <div class="wrap wrap--2">
         <div class="container container--2">
             <h2>Diet Plan</h2>
-            <p>Receive custom diet plans designed to help you achieve your fitness goals. Click the button below to view more.</p>
-            <button class="btn">View More</button>
+            <p>Receive custom diet plans designed to help you achieve your fitness goals. Click the button below to view
+                more.</p>
+            <button class="btn" id="dietPlans">View More</button>
         </div>
     </div>
 
     <div class="wrap wrap--3">
         <div class="container container--3">
             <h2>Catering Plan</h2>
-            <p>Enjoy weekly catering services delivering delicious and nutritious meals to your doorstep. Click the button below to view more.</p>
+            <p>Enjoy weekly catering services delivering delicious and nutritious meals to your doorstep. Click the
+                button below to view more.</p>
             <button class="btn">View More</button>
         </div>
     </div>
