--- a/aboutAs/aoutAs.html
+++ b/aboutAs/aoutAs.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="aboutAs.css">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style1.css">
+    <link rel="stylesheet" type="text/css" href="aboutAs.css">
     <title>About Us - DietShop</title>
 </head>
 <body>
@@ -16,60 +18,57 @@
         <li><a href="../contact/contact.html">Contact Us</a></li>
 
         <!-- <a href="../logIn/logIn.html" class="btn1">Log In</a> -->
-         </ul>
-     </nav>
-     <header>
-         <h1 id="top">About DietShop</h1>
-     </header>
-     <hr>
-     <hr>
-     <div class="about-content">
-         <h2>Our Story</h2>
-         <p>Welcome to DietShop, where our journey began with a simple idea: to provide individuals with the tools and
-             resources to lead healthier lives through proper nutrition and catering services.</p>
-         <p>Our story started in a small kitchen, where our founder, passionate about nutrition and wellness, began crafting
-             personalized nutrition plans for friends and family. As the demand for our services grew, so did our vision.</p>
-         <p>Today, DietShop stands as a testament to our commitment to excellence in nutrition and catering. We believe in
-             delivering not just meals, but experiences that nourish the body and soul.</p>
-         <p>Our mission is to empower individuals to make informed choices about their health and wellness by providing
-             access to delicious, nutritious meals and personalized support every step of the way.</p>
-         <p>At DietShop, we envision a future where everyone has the opportunity to thrive and live their best lives through
-             the power of healthy eating.</p>
-     </div>
-     <hr>
-     <div class="team-section">
-         <h2>Meet Our Team</h2>
-         <div class="team-member">
-             <p> Team Member 1</p>
-             <h3>Megi Grenazi</h3>
-         </div>
-         <div class="team-member">
-             <p> Team Member 2 </p>
-             <h3>Grasjela Celaj</h3>
+    </ul>
+</nav>
+<div class="circle-top"></div>
+<div class="circle-bottom"></div>
+<div class="about-content wide">
+    <h2 style="text-align: center;">Our Story</h2>
+    <p>Welcome to DietShop, where our journey began with a simple idea: to provide individuals with the tools and
+        resources to lead healthier lives through proper nutrition and catering services.</p>
+    <p>Our story started in a small kitchen, where our founder, passionate about nutrition and wellness, began crafting
+        personalized nutrition plans for friends and family. As the demand for our services grew, so did our vision.</p>
+    <p>Today, DietShop stands as a testament to our commitment to excellence in nutrition and catering. We believe in
+        delivering not just meals, but experiences that nourish the body and soul.</p>
+    <p>Our mission is to empower individuals to make informed choices about their health and wellness by providing
+        access to delicious, nutritious meals and personalized support every step of the way.</p>
+    <p>At DietShop, we envision a future where everyone has the opportunity to thrive and live their best lives through
+        the power of healthy eating.</p>
+</div>
+<header>
+<div class="header-content">
+    <span>company management</span>
+    <h1>Meet a team of experts and innovators who are pioneers in their field</h1>
+</div>
+</header>
 
-         </div>
-         <div class="team-member">
-             <p> Team Member 3</p>
-             <h3>Kismete Guri</h3>
+<section>
+    <div class="card">
+        <img src="" >
+        <h2>Megi Grenazi</h2>
+    </div>
+    <div class="card">
+        <img src="" >
+        <h2>Grasjela Celaj</h2>
+    </div>
+    <div class="card">
+        <img src="">
+        <h2>Kismete Guri</h2>
+    </div>
+    <div class="card">
+        <img src="" >
+        <h2>Elda Halilaj</h2>
+    </div>
+    <div class="card">
+        <img src="" >
+        <h2>Arber Allko</h2>
+    </div>
 
-         </div>
-         <div class="team-member">
-             <p> Team Member 4 </p>
-             <h3>Elda Halilaj</h3>
+</section>
 
-         </div>
-
-     <div class="team-member">
-         <p> Team Member 5</p>
-         <h3>Arber Allko</h3>
-
-     </div>
-     </div>
-
-     <hr>
-     <!-- Update the Testimonials section in about.html -->
+<!-- Update the Testimonials section in about.html -->
 <div class="testimonials-section">
-    <h2>Testimonials</h2>
+    <h2 class="testimonial-heading">Testimonials</h2>
     <div class="testimonial-carousel">
         <div class="testimonials-container">
             <div class="testimonial">
@@ -77,8 +76,8 @@
                 <p class="testimonial-author">- Emily Johnson</p>
             </div>
             <div class="testimonial">
-                <p>"I highly recommend DietShop to anyone looking to improve their health and wellness. The catering
-                    service is exceptional!"</p>
+                <p>"I highly recommend DietShop to anyone looking to improve their health and wellness.</p>
+                  <p>  The catering service is exceptional!"</p>
                 <p class="testimonial-author">- Mark Davis</p>
             </div>
             <div class="testimonial">
@@ -88,12 +87,11 @@
             <!-- Add more testimonials here -->
         </div>
         <div class="carousel-buttons">
-            <button id="prevBtn"></button>
-            <button id="nextBtn">&gt;</button>
+            <button id="prevBtn" onclick="moveTestimonials(-1)">&lt;</button>
+            <button id="nextBtn" onclick="moveTestimonials(1)">&gt;</button>
         </div>
     </div>
 </div>
-<script src="aboutAs.js"></script>
 <hr>
 <footer class="detailed-footer">
     <div class="footer-info">
@@ -114,6 +112,6 @@
         <p>&copy; 2024 DietShop. All Rights Reserved.</p>
     </div>
 </footer>
-<script src="script.js"></script>
+<script src="aboutAs.js"></script>
 </body>
 </html>
