--- a/Nutricion/menu.html
+++ b/Nutricion/menu.html
@@ -10,7 +10,7 @@
 <header>
     <h1> Mosha </h1>
 </header>
-<nav>
+<nav class="day">
     <ul class="days">
 
         <li><a href="#dita1" >E Hene</a></li>
