--- a/Nutricion/border.html
+++ b/Nutricion/border.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Well-being/Nutrition/Catering Platform</title>
-    <link rel="stylesheet" href="border.css">
+    <link rel="stylesheet" href="nutricion.css">
 </head>
 <body>
 
 <main>
+    <div  class="the-content">
     <h2>Nutricionet!</h2>
-    <p>Nutricionet jane esenciale per rritjen, zhvillimin dhe mirëqenien e trupit. Ato jane substancat ushqyese qe organizmi i njeriut i nevojitet per te funksionuar ne menyre te duhur. Nutricionet mund te jene karbohidrate, proteina, yndyra, vitamina, minerale dhe uje.
+    <p >Nutricionet jane esenciale per rritjen, zhvillimin dhe mirëqenien e trupit. Ato jane substancat ushqyese qe organizmi i njeriut i nevojitet per te funksionuar ne menyre te duhur. Nutricionet mund te jene karbohidrate, proteina, yndyra, vitamina, minerale dhe uje.
         Te ushqyerit eshte thelbësore për të ruajtur shëndetin dhe mirëqenien tonë. Është e rëndësishme të kuptojmë nevojat e trupit tonë nëpërmjet fushës së ushqimit dhe të mbajmë situatën nën kontroll gjithmonë. Duke ndarë nutricionet sipas moshës, ne mund të përcaktojmë me saktësi se çfarë është e shëndetshme për të konsumuar përmes dietës së përditshme. Kjo ndihmon në sigurimin e një balanci të duhur të ushqimit dhe në mbrojtjen e shëndetit tonë në mënyrë efikase.</p>
-
+    </div>
     <div class="card">
         <div class="container">
             <h4><b>Foshnjet dhe Fëmijët e Vegjël</b></h4>
@@ -72,7 +73,7 @@
     <!-- Shto më shumë seksione për ditët e tjera -->
 </main>
 <footer>
-    <p>Copyright © 2023 Well-being/Nutrition/Catering Platform</p>
+    <p>Copyright © 2024 /Nutrition</p>
 </footer>
 </body>
 </html>
