--- a/semundjet/1.html
+++ b/semundjet/1.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700" rel="stylesheet">
-  <title>Collapsible Panels</title>
-  <link rel="stylesheet" href="prv.css">
+  <title>Dieta ne baze te semundjeve </title>
+  <link rel="stylesheet" href="css.css">
 </head>
 <div id="aspect-content">
     <div class="aspect-tab ">
@@ -20,7 +20,7 @@
                       <div class="second-fill" style="transform: rotate(249deg)"></div>
                   </div>
               </div>
-              <span class="aspect-name">Lorem ipsum</span>
+              <span class="aspect-name">Hipertensioni</span>
           </div>
           <div class="aspect-stat">
               <div class="all-opinions">
@@ -39,7 +39,7 @@
               <div>
                   <div>
                       <div class="positive-count opinion-header">
-                          <span>positive</span>
+                          <span>cfare duhet te hame?</span>
                           <span>4</span>
                       </div>
                       <div>
