--- a/semundjet/1.html
+++ b/semundjet/1.html
@@ -7,14 +7,15 @@
   <title>Dieta ne baze te semundjeve </title>
   <link rel="stylesheet" href="css.css">
 </head>
-<div id="aspect-content">
+<body>
+  <div id="aspect-content">
     <div class="aspect-tab ">
-      <input id="item-18" type="checkbox" class="aspect-input" name="aspect">
-      <label for="item-18" class="aspect-label"></label>
+      <input id="food-18" type="checkbox" class="aspect-input" name="aspect">
+      <label for="food-18" class="aspect-label"></label>
       <div class="aspect-content">
           <div class="aspect-info">
-              <div class="chart-pie negative over50">
-                  <span class="chart-pie-count">-69</span>
+              <div class="chart-pie negative ">
+                  <span class="chart-pie-count">😔</span>
                   <div>
                       <div class="first-fill"></div>
                       <div class="second-fill" style="transform: rotate(249deg)"></div>
@@ -22,182 +23,46 @@
               </div>
               <span class="aspect-name">Hipertensioni</span>
           </div>
-          <div class="aspect-stat">
-              <div class="all-opinions">
-                  <span class="all-opinions-count">18</span>
-                  <span>opinion</span>
-              </div>
-              <div>
-                  <span class="positive-count">4</span>
-                  <span class="neutral-count">1</span>
-                  <span class="negative-count">13</span>
-              </div>
-          </div>
       </div>
       <div class="aspect-tab-content">
           <div class="sentiment-wrapper">
               <div>
                   <div>
                       <div class="positive-count opinion-header">
+                        🍲
                           <span>cfare duhet te hame?</span>
-                          <span>4</span>
                       </div>
                       <div>
-                          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin id congue dolor. Vivamus eleifend vitae nunc sed tincidunt.</span>
+                          <span>Ushqime me pak sod dhe yndyra,
+                             si fruta, perime, grurë i plotë, dhe peshk. 
+                             Kufizoni konsumin e kripës dhe sheqerit.</span>
                       </div>
                   </div>
               </div>
               <div>
                   <div>
                       <div class="neutral-count opinion-header">
-                          <span>neutral</span>
-                          <span>1</span>
+                          <span>Aktiviteti fizik qe duhet te ndjekim </span>
                       </div>
                       <div>
-                          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin id congue dolor. Vivamus eleifend vitae nunc sed tincidunt.</span>
+                          <span>Gjimnastikë aerobike të përmbajtura, si ecje e shpejtë ose notim.</span>
                       </div>
                   </div>
               </div>
               <div>
                   <div>
                       <div class="negative-count opinion-header">
-                          <span>negative</span>
-                          <span>13</span>
+                          <span>Keshilla te pergjithshme </span>
                       </div>
                       <div>
-                          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin id congue dolor. Vivamus eleifend vitae nunc sed tincidunt.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin id congue dolor. Vivamus eleifend vitae nunc sed tincidunt.</span>
+                          <span> Menaxhimi i stresit dhe relaksimi.</span>
                       </div>
                   </div>
               </div>
           </div>
       </div>
     </div>
-    <div class="aspect-tab ">
-      <input id="item-14" type="checkbox" class="aspect-input" name="aspect">
-      <label for="item-14" class="aspect-label"></label>
-      <div class="aspect-content">
-          <div class="aspect-info">
-              <div class="chart-pie positive over50">
-                  <span class="chart-pie-count">58</span>
-                  <div>
-                      <div class="first-fill"></div>
-                      <div class="second-fill" style="transform: rotate(209deg)"></div>
-                  </div>
-              </div>
-              <span class="aspect-name">Lorem ipsum dolor sit amet</span>
-          </div>
-          <div class="aspect-stat">
-              <div class="all-opinions">
-                  <span class="all-opinions-count">22</span>
-                  <span>opinion</span>
-              </div>
-              <div>
-                  <span class="positive-count">12</span>
-                  <span class="neutral-count">5</span>
-                  <span class="negative-count">5</span>
-              </div>
-          </div>
-      </div>
-      <div class="aspect-tab-content">
-          <div class="sentiment-wrapper">
-              <div>
-                  <div>
-                      <div class="positive-count opinion-header">
-                          <span>positive</span>
-                          <span>12</span>
-                      </div>
-                      <div>
-                          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin id congue dolor. Vivamus eleifend vitae nunc sed tincidunt.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin id congue dolor. Vivamus eleifend vitae nunc sed tincidunt.</span>
-                      </div>
-                  </div>
-              </div>
-              <div>
-                  <div>
-                      <div class="neutral-count opinion-header">
-                          <span>neutral</span>
-                          <span>5</span>
-                      </div>
-                      <div>
-                          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin id congue dolor. Vivamus eleifend vitae nunc sed tincidunt.</span>
-                      </div>
-                  </div>
-              </div>
-              <div>
-                  <div>
-                      <div class="negative-count opinion-header">
-                          <span>negative</span>
-                          <span>5</span>
-                      </div>
-                      <div>
-                          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin id congue dolor. Vivamus eleifend vitae nunc sed tincidunt.</span>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-    </div>
-    <div class="aspect-tab ">
-      <input id="item-2" type="checkbox" class="aspect-input" name="aspect">
-      <label for="item-2" class="aspect-label"></label>
-      <div class="aspect-content">
-          <div class="aspect-info">
-              <div class="chart-pie positive">
-                  <span class="chart-pie-count">33</span>
-                  <div>
-                      <div class="first-fill"></div>
-                      <div class="second-fill" style="transform: rotate(119deg)"></div>
-                  </div>
-              </div>
-              <span class="aspect-name">Lorem</span>
-          </div>
-          <div class="aspect-stat">
-              <div class="all-opinions">
-                  <span class="all-opinions-count">7</span>
-                  <span>opinion</span>
-              </div>
-              <div>
-                  <span class="positive-count">3</span>
-                  <span class="neutral-count">2</span>
-                  <span class="negative-count">2</span>
-              </div>
-          </div>
-      </div>
-      <div class="aspect-tab-content">
-          <div class="sentiment-wrapper">
-              <div>
-                  <div>
-                      <div class="positive-count opinion-header">
-                          <span>positive</span>
-                          <span>3</span>
-                      </div>
-                      <div>
-                          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin id congue dolor. Vivamus eleifend vitae nunc sed tincidunt.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
-                      </div>
-                  </div>
-              </div>
-              <div>
-                  <div>
-                      <div class="neutral-count opinion-header">
-                          <span>neutral</span>
-                          <span>2</span>
-                      </div>
-                      <div>
-                          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin id congue dolor. Vivamus eleifend vitae nunc sed tincidunt.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin id congue dolor. Vivamus eleifend vitae nunc sed tincidunt.</span>
-                      </div>
-                  </div>
-              </div>
-              <div>
-                  <div>
-                      <div class="negative-count opinion-header">
-                          <span>negative</span>
-                          <span>2</span>
-                      </div>
-                      <div>
-                          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin id congue dolor. Vivamus eleifend vitae nunc sed tincidunt.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin id congue dolor. Vivamus eleifend vitae nunc sed tincidunt.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin id congue dolor. Vivamus eleifend vitae nunc sed tincidunt.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin id congue dolor. Vivamus eleifend vitae nunc sed tincidunt.</span>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-    </div>
+    <!-- Other aspect tabs go here -->
   </div>
+</body>
+</html>
