--- a/semundjet/1.html
+++ b/semundjet/1.html
@@ -3,66 +3,65 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700" rel="stylesheet">
-  <title>Dieta ne baze te semundjeve </title>
-  <link rel="stylesheet" href="css.css">
+  <title>Animated and Responsive Accordion</title>
+  <!-- Connect your CSS file here -->
+  <link rel="stylesheet" href="dysh.css">
 </head>
 <body>
-  <div id="aspect-content">
-    <div class="aspect-tab ">
-      <input id="food-18" type="checkbox" class="aspect-input" name="aspect">
-      <label for="food-18" class="aspect-label"></label>
-      <div class="aspect-content">
-          <div class="aspect-info">
-              <div class="chart-pie negative ">
-                  <span class="chart-pie-count">😔</span>
-                  <div>
-                      <div class="first-fill"></div>
-                      <div class="second-fill" style="transform: rotate(249deg)"></div>
-                  </div>
-              </div>
-              <span class="aspect-name">Hipertensioni</span>
+  <!-- Your HTML content goes here -->
+  <section class="section_accordion">
+    <h1>Animated and Responsive Accordion<br><small>Pure Javascript and CSS</small></h1>
+
+    <div class="accordion">
+      <div class="card is-active">
+        <a class="card__title is-active" data-toggle="collapse" href="#content1">
+          Lorem ipsum dolor
+          <svg class="icon icon-keyboard_arrow_down" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+            <path d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"/>
+          </svg>
+        </a>
+
+        <div id="content1" class="collapse is-active" data-parent=".accordion">
+          <div class="card__content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, illo, vero. Blanditiis nam quae, maiores possimus totam doloribus aliquam, non, aliquid dolores cum distinctio porro, itaque recusandae ad aperiam voluptates!
           </div>
+        </div>
       </div>
-      <div class="aspect-tab-content">
-          <div class="sentiment-wrapper">
-              <div>
-                  <div>
-                      <div class="positive-count opinion-header">
-                        🍲
-                          <span>cfare duhet te hame?</span>
-                      </div>
-                      <div>
-                          <span>Ushqime me pak sod dhe yndyra,
-                             si fruta, perime, grurë i plotë, dhe peshk. 
-                             Kufizoni konsumin e kripës dhe sheqerit.</span>
-                      </div>
-                  </div>
-              </div>
-              <div>
-                  <div>
-                      <div class="neutral-count opinion-header">
-                          <span>Aktiviteti fizik qe duhet te ndjekim </span>
-                      </div>
-                      <div>
-                          <span>Gjimnastikë aerobike të përmbajtura, si ecje e shpejtë ose notim.</span>
-                      </div>
-                  </div>
-              </div>
-              <div>
-                  <div>
-                      <div class="negative-count opinion-header">
-                          <span>Keshilla te pergjithshme </span>
-                      </div>
-                      <div>
-                          <span> Menaxhimi i stresit dhe relaksimi.</span>
-                      </div>
-                  </div>
-              </div>
+
+      <div class="card">
+        <a class="card__title" data-toggle="collapse" href="#content2">
+          Lorem ipsum dolor sit amet
+          <svg class="icon icon-keyboard_arrow_down" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+            <path d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"/>
+          </svg>
+        </a>
+
+        <div id="content2" class="collapse" data-parent=".accordion">
+          <div class="card__content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, illo, vero. Blanditiis nam quae, maiores possimus totam doloribus aliquam, non, aliquid dolores cum distinctio porro, itaque recusandae ad aperiam voluptates!
           </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <h4 class="card__title" data-toggle="collapse" data-target="#content3">
+          Lorem ipsum dolor sit
+          <svg class="icon icon-keyboard_arrow_down" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+            <path d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"/>
+          </svg>
+        </h4>
+
+        <div id="content3" class="collapse" data-parent=".accordion">
+          <div class="card__content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, illo, vero. Blanditiis nam quae, maiores possimus totam doloribus aliquam, non, aliquid dolores cum distinctio porro, itaque recusandae ad aperiam voluptates!
+          </div>
+        </div>
       </div>
     </div>
-    <!-- Other aspect tabs go here -->
-  </div>
+  </section>
+
+  <!-- Connect your JavaScript file here -->
+  <script src="dysh.js"></script>
+
 </body>
 </html>
