--- a/semundjet/1.html
+++ b/semundjet/1.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Animated and Responsive Accordion</title>
   <!-- Connect your CSS file here -->
-  <link rel="stylesheet" href="dysh.css">
+  <link rel="stylesheet" href="css.css">
 </head>
 <body>
   <!-- Your HTML content goes here -->
@@ -61,7 +61,7 @@
   </section>
 
   <!-- Connect your JavaScript file here -->
-  <script src="dysh.js"></script>
+  <script src="js.js"></script>
 
 </body>
 </html>
